# PetManager

./: CMakeLists.txt  config.ini  package-lock.json  package.json  smtp_config.conf
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
pethospital/: .env  .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
pethospital/src/: App.vue  main.ts
pethospital/src/api/: index.ts
pethospital/src/api/include/: Encrypt.h  GetAddress.h  ManagerBack.h  User.h  Utils.h  Verification.h
pethospital/src/api/src/: Encrypt.cpp  GetAddress.cpp  ManagerBack.cpp  RunServe.cpp  User.cpp  Utils.cpp  Verification.cpp
pethospital/src/api/src/RunServe.dSYM/Contents/: Info.plist
pethospital/src/api/src/RunServe.dSYM/Contents/Resources/Relocations/aarch64/: RunServe.yml
pethospital/src/assets/styles/: About.css  App.css  Home.css  Login.css  Personal.css  register.css
pethospital/src/components/: HomePage.vue  LoginPage.vue  PersonalPage.vue
pethospital/src/router/: index.ts
pethospital/src/store/: index.ts
pethospital/src/views/: UserDashboardView.vue
pethospital/src/views/Home/: AboutView.vue  HomeView.vue  LoginView.vue  RegisterView.vue
pethospital/src/views/Personal/: PersonalView.vue  personalRightView.vue  setAddressView.vue  setBirthdayView.vue  setEmailView.vue  setHeadView.vue  setNameView.vue  setPhoneView.vue
pethospital/utils/: phoneValidator.ts
